# skmerspectrum

./: .gitignore  CMakeLists.txt  Hash.hpp  README.md  skmers.hpp
app/: CMakeLists.txt  main.cpp
include/: skmers.hpp
src/: Hash.hpp  skmers.cpp
